/* Translations */ ko <muskrat#1712903>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -37,6 +37,7 @@
 *Icelandic: [[moskusrotta]], [[bísamrotta]]
 *[[Irish]]: [[muscfhrancach]]
 *Italian: [[topo muschiato]] {{m}}
+*Korean:  [[사향쥐]] (sahyangjwi)
 {{mid}}
 *Latin: [[Ondatra zibethicus]]
 *Latvian: [[ondatra]]
