Corrected layout, added Dutch translations <simple#1717576>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -23,12 +23,11 @@ From French ''simple'', from Latin ''[[simplex]]''
 *[[compound]]
 
 ====Translations====
-'''uncomplicated'''
-{{top}}
+{{top|uncomplicated}}
 *Arabic: {{ARchar|[[بسيط]]}} {{IPAchar|(basíeʈ)}}
 *Bulgarian: [[прост]] (prost) {{m}}
 *Chinese: [[简单化]] (jiǎndān huà)
-*Dutch: [[eenvoudig]]
+*Dutch: [[eenvoudig]], [[simpel]]
 *Esperanto: [[simpla]]
 *Finnish: [[yksinkertainen]] ([[simppeli]], ''slang'')
 *French: simple
@@ -48,13 +47,13 @@ From French ''simple'', from Latin ''[[simplex]]''
 *Telugu: [[సరళమైన]] (saraLamaina)
 {{bottom}}
 
-'''simple-minded'''
+{{top|simple-minded}}
 *Bulgarian: [[прост]] (prost) {{m}}, [[малоумен]] (maloúmen) {{m}}
+*Dutch: [[achterlijk]], [[simpel]]
+{{mid}}
 *German: [[einfach]]
 *Swedish: [[enkel]]
-
-'''to be checked'''
-*{{ttbc|Dutch}}: [[simpel]]
+{{bottom}}
 
 ===Related terms===
 *[[simplex]]
@@ -92,7 +91,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 ===Related terms===
 *[[simplement]]
 *[[simplicité]]
-*[[simmplifier]]
+*[[simplifier]]
 
 [[Category:1000 English basic words]]
 
