--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -80,11 +80,11 @@ From French ''simple'', from Latin ''[[simplex]]''
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /sɛ̃pl/
+*[[w:IPA|IPA]]: /s̃ɛpl/
 *[[w:SAMPA|SAMPA]]: /sE~pl/
 
 ===Adjective===
-{{fr-infl-adj|sm=simple|sf=simple|pm=simples|pf=simples|smp=sɛ̃pl|sfp=sɛ̃pl|pmp=sɛ̃pl|pfp=sɛ̃pl}}
+{{fr-infl-adj|sm=simple|sf=simple|pm=simples|pf=simples|smp=s̃ɛpl|sfp=s̃ɛpl|pmp=s̃ɛpl|pfp=s̃ɛpl}}
 
 # simple
 
