--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -46,7 +46,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 *Greek: [[νήσος]] (nísos) {{f}}, [[νησί]] (nisí) {{n}}
 *Hebrew: [[אי]] (i) {{m}}
 *Hungarian: [[sziget]]
-*Icelandic: [[Ísland]]
+*Icelandic: [[eyja]], [[eyland]]
 *Ido: [[insulo]]
 *Ilocano: [[puro]]
 *Indonesian: [[pulau]], [[nusa]]
