--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,27 +1,15 @@
-* '''[[Wiktionary:Chinese radical index| Radical]] Number 74''': [[Wiktionary:Chinese radical index 月|月]]+0 stroke
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 4|4]]
-
-*'''Stroke order'''
-*# The left-most sloping vertical stroke is done from top to bottom.
-*# The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.
-*# The middle horizontal line is done from left to right.
-*# The bottom horizontal line is done from left to right.
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 7722<sub>0</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 月 (B)
-
-* '''Graphical Significance and Origin''': Pictographic representation, originally of the crescent moon.
-
-* '''Common Meaning'''
-*# [[moon]]
-*# [[month]]
-*# KangXi radical 74 [[Wiktionary:Chinese radical index 月|月]]
+==Translingual==
+===Etymology===
+Pictographic representation, originally of the crescent moon.
+===Han character===
+{{Han char|rn=74|rad=月|as=00|sn=4|so= The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.|four=7722<sub>0</sub>|canj=月 (B)|cmean= [[moon]];  [[month]];  KangXi radical 74 [[Wiktionary:Chinese radical index 月|月]]}}
+====References====
+{{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
 
 ----
+==Chinese==
+===Hanzi===
 
-== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +21,7 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yut6
 
-===Compounds===
+====Compounds====
 *[[月白]]
 *[[月白风情]]
 *[[月半]]
@@ -89,18 +77,19 @@
 <!--
 For an example of a character with multiple pronunciations (and hence Romanizations), see the section "Pronounciation & Definition" in [[Wiktionary talk:Entries on Chinese characters | Talk]]
 -->
-
 ----
-
 ==Japanese==
 [[Category:1000 Japanese basic words|つき]]
-[[Category:Japanese language|つき]]
 
-===[[Kanji]]===
-{{kanji|on readings=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')
-|kun readings=[[つき]] (''tsuki'')}}
 
-===Compounds===
+
+===Kanji===
+
+{{ja-kanji|grade=1|rs=月00|simple=}}
+====Readings====
+{{ja-readings|on=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')|kun=[[つき]] (''tsuki'')}}
+
+====Compounds====
 *[[月下氷人]]
 *[[月額]]
 *[[月刊]]
@@ -141,7 +130,8 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 [[Category:ja:Time]]
 ----
 
-== Korean [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''[[Hangeul]]''': 월
 
@@ -151,28 +141,6 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': wol
 ** '''[[McCune-Reischauer]]''': wŏl
 ** '''[[Yale]]''': wel
-
-
-----
-
-== Dictionary Information ==
-
-* KangXi: 0504.190
-* Morohashi: 14330
-* Dae Jaweon: 0879.200
-* Hanyu Da Zidian: 32041.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 6708
-** Decimal: 26376
-* '''Big5''':
-** Hex: A4EB
-** Decimal: 42219
-
-[[Category:Japanese kanji]]
-[[Category:Grade 1 kanji]]
 
 [[da:月]]
 [[de:月]]
