--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -6,16 +6,34 @@
 # The amount [[consume|consumed]].  ''gross national consumption''
 # {{pathology}} {{obsolete}} [[tuberculosis|Tuberculosis]].
 
-==== Translations ====
+====Translations====
+{{top|the act of consuming something}}
+*Bulgarian: [[консумиране]] {{f}}, [[изразходване]] {{n}}
+*[[Catalan]]: [[consum]] {{m}}
+*Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
+{{mid}}
+*Finnish: [[kuluttaminen]], [[kulutus]]
+*French: [[consumer]]
+*Portuguese: [[consumo]] {{m}}
+{{bottom}}
 
-*[[Bulgarian]]: [[консумиране]] ''f'' (1), [[изразходване]] ''n'' (1), [[консумация]] ''f'' (2), [[туберкулоза]] ''f'' (3)
-*[[Catalan]]: [[consum]] ''m'' (1,2), [[tuberculosi]] (3)
-*Czech: [[konzumace]] {{f}} (1,2), [[spotřeba]] {{f}} (1,2), [[tuberkulóza]] {{f}} (3)
-*Finnish: [[kuluttaminen]] (1), [[kulutus]] (1,2), [[tuberkuloosi]] (3)
-*French: [[consumer]] (1), [[consommation]] ''f'' (2), [[tuberculose]] ''f'' (3)
+{{top|the amount consumed}}
+*Bulgarian: [[консумация]] {{f}}
+*[[Catalan]]: [[consum]] {{m}}
+*Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
+{{mid}}
+*Finnish: [[kulutus]]
+*French: [[consommation]] {{f}}
+{{bottom}}
 
-
-
+{{top|tuberculosis}}
+*Bulgarian: [[туберкулоза]] {{f}}
+*[[Catalan]]: [[tuberculosi]]
+*Czech: [[tuberkulóza]] {{f}}
+{{mid}}
+*Finnish: [[tuberkuloosi]]
+*French: [[tuberculose]] {{f}}
+{{bottom}}
 
 [[ar:consumption]]
 [[fr:consumption]]
