--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -3,8 +3,7 @@
 {{rank|since|use|used|252|began|thy|less|till}}
 
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /bI'gæn/
+*{{IPA|/bI'gæn/}}, {{SAMPA|/bI"g{n/}}
 *{{audio|en-us-began.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-æn|-æn]]
 
