--- a/en/d/DVD-R.26220.wikitext
+++ b/en/d/DVD-R.26220.wikitext
@@ -2,4 +2,5 @@
 
 ==={{Initialism}}===
 '''DVD-R'''
-# Digital Versatile Disk - Recordable.  A form of digital media that is similar to a CD, but has far denser capacity.  It can only be written to once, but it can be read from an indefinite number of times.
+
+# [[digital|Digital]] [[versatile|Versatile]] [[disk|Disk]] - [[recordable|Recordable]].  A form of digital media that is similar to a CD, but has far denser capacity.  It can only be written to once, but it can be read from an indefinite number of times.
