--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,8 +1,12 @@
 ==Translingual==
+{{Han stroke| The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.}}
 ===Etymology===
 Pictographic representation, originally of the crescent moon.
 ===Han character===
-{{Han char|rn=74|rad=月|as=00|sn=4|so= The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.|four=7722<sub>0</sub>|canj=月 (B)|cmean= [[moon]];  [[month]];  KangXi radical 74 [[Wiktionary:Chinese radical index 月|月]]}}
+{{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)}}
+# [[moon]]
+# [[month]]
+# KangXi radical 74 [[Wiktionary:Chinese radical index 月|月]]
 ====References====
 {{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
 
@@ -85,7 +89,7 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 
 ===Kanji===
 
-{{ja-kanji|grade=1|rs=月00|simple=}}
+{{ja-kanji|grade=1|rs=月00}}
 ====Readings====
 {{ja-readings|on=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')|kun=[[つき]] (''tsuki'')}}
 
