--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -17,6 +17,7 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 {{top}}
 *Bosnian: [[pidžama]] {{f}} {{s}}
 *Chinese: [[睡衣]] (shuì yī, lit. ''sleep clothing'')
+*Korean: [[잠옷]] jahm-oht
 *Dutch: [[pyjama]] {{m}} {{s}}
 *Estonian: [[pidžaama]]
 *Finnish: [[pyjama]], [[yöpuku]] {{s}}
