cat switch <FM#1733946>

--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -1,5 +1,4 @@
 ==English==
-[[Category:United States]]
 ==={{initialism}}===
 '''FM'''
 
@@ -7,6 +6,8 @@
 
 ==={{Abbreviation}}===
 # {{geography}} [[Federated States of Micronesia]]
+
+[[Category:United States of America]]
 
 [[de:FM]]
 [[et:FM]]
