--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -26,7 +26,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 {{top|uncomplicated}}
 *Arabic: {{ARchar|[[بسيط]]}} {{IPAchar|(basíeʈ)}}
 *Bulgarian: [[прост]] (prost) {{m}}
-*Chinese: [[简单化]] (jiǎndān huà)
+*Chinese: [[简单]] (jiǎndān)
 *Dutch: [[eenvoudig]], [[simpel]]
 *Esperanto: [[simpla]]
 *Finnish: [[yksinkertainen]] ([[simppeli]], ''slang'')
