more svtrans <bound#1736035>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -66,6 +66,9 @@
 # A sizeable jump.
 #: ''The deer crossed the stream in a single '''bound'''.''
 
+====Translations====
+*Swedish: [[hopp]] {{n}}, [[skutt]] {{n}}
+
 ====Verb====
 {{en-verb}}
 
@@ -74,6 +77,9 @@
 
 =====Derived terms=====
 *[[rebound]]
+
+====Translations====
+*Swedish: [[skutta]]
 
 ===Etymology 4===
 Alteration of ''[[boun]]'', with '''-d''' partly for euphonic effect and partly by association with Etymology 1, above.
