--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
+{{en-adj}}===Noun===
 '''consumption'''
 
 # The act of [[consume|consuming]] something.  ''The fire's consumption of the forest caused ecological changes.''
