--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -40,6 +40,7 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 [[hu:quatorze]]
 [[ja:quatorze]]
 [[pt:quatorze]]
+[[ru:quatorze]]
 [[fi:quatorze]]
 [[sv:quatorze]]
 [[vi:quatorze]]
