--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -29,16 +29,12 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 {{mid}}
 {{bottom}}
 
-----
-
 ==Dutch==
 
 ===Adverb===
 '''qua'''
 
 # Qua.
-
-----
 
 ==Ido==
 
@@ -48,8 +44,6 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 # Who.
 
 [[Category:Ido language]]
-
-----
 
 ==Italian==
 
@@ -66,8 +60,6 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 *[[li#Italian|li]]
 *[[qui#Italian|qui]]
 
-----
-
 ==Latin==
 
 ===Adverb===
@@ -77,8 +69,25 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 # In the character of
 # In so far as
 
+==Vietnamese==
+===Preposition===
+'''qua'''
+# [[through]], [[across]], [[by]]
+
+===Adjective===
+'''qua'''
+# [[last#Adjective|last]]
+
+===Intransitive verb===
+'''qua'''
+# to be [[gone]]
+# to [[cross#Verb|cross]]
+
 [[Category:Italian adverbs]]
 [[Category:Latin adverbs]]
+[[Category:Vietnamese prepositions]]
+[[Category:Vietnamese adjectives]]
+[[Category:Vietnamese verbs]]
 
 [[da:qua]]
 [[de:qua]]
