--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -31,7 +31,7 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 *Serbian:
 *:Cyrillic: [[пиџама]] {{f}} {{s}}
 *:Latin: [[pidžama#Serbian|pidžama]] {{f}} {{s}}
-*Spanish: [[pijama]], [[pijamas]] {{n}}
+*Spanish: [[pijama]] {{m}}, [[piyama]] {{f}}
 *Swedish: pyjamas {{c}} ''singular''
 {{bottom}}
 
