--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -79,7 +79,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Japanese: [[事]] ([[こと]], koto)
 *Korean: [[물건]] (mulgeon)
 *Latin: [[res#Latin|rēs]] {{f}}
-*Latvian: [[lieta]]
+*Latvian: [[lieta]] {{f}}
 *[[Marathi]]: [[वस्तु]] (vastu)
 *Norwegian: [[ting]], [[dings]], [[greie]] {{m}} {{g|Norwegian}}
 *[[Old English]]: [[þing]] {{n}}
