--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,5 +1,5 @@
 ==Translingual==
-{{Han stroke| The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.}}
+{{Han stroke| The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.}}{{-}}
 ===Etymology===
 Pictographic representation, originally of the crescent moon.
 ===Han character===
