+Wikipedia link, etymology, German & French translation <quadrilateral#1770049>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -1,16 +1,23 @@
 ==English==
-
+===Etymology===
+: From {{L.}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (side)
 ===Noun===
+{{Wikipedia}}
 '''quadritaleral'''
 # a [[polygon]] having four sides.
 
 ====Translations====
+{{top}}
 *Dutch: [[vierhoek]]
 *[[Hindi]]: [[चतुर्भुज]] 
 *Italian: [[quadrilatero]] ''m''
+*French: [[quadrilatère]]
+{{mid}}
+*German: [[Viereck]]
 *Japanese: [[四辺形]] (shihenkei)
 *Romanian: [[patrulater]], [[cadrilater]]
 *Telugu: [[చతుర్భుజి]] (chaturbhuji)
+{{bottom}}
 
 ===Adjective===
 '''quadrilateral'''
