--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -22,20 +22,21 @@
 ====Translations====
 {{top}}
 *Arabic: [[إِعْلان]] , [[إِيذان]]
-*[[Breton]]: [[bruderezh]] {{m}}
+*Breton: [[bruderezh]] {{m}}
 *Bulgarian: [[реклама]] {{f}}
 *Chinese: [[廣告]]/[[广告]] (guǎng gào)
+*Croatian: [[reklama]]
 *Danish: [[reklame]]
 *Dutch: [[advertentie]] {{f}}
 *Estonian: [[reklaam]],[[propaganda]],[[kuulutus]]
 *Finnish: [[mainos]], [[mainostus]]
 *French: [[publicité]] {{f}}, [[pub]] {{f}}, [[annonce]] {{f}}
-*[[Frisian]]: [[advertinsje]], [[oankundiging]]
+*Frisian: [[advertinsje]], [[oankundiging]]
 *German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]]
 *Greek: [[διαφήμιση]] (diafimisi) {{f}}
 *Hungarian: [[hirdetés]], [[reklám]]
 *Indonesian: [[iklan]], [[reklame]]
-*[[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
+*Interlingua: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
 *Italian: [[annuncio]] {{m}}, [[pubblicità]] {{f}}
 {{mid}}
 *Japanese: [[広告]] (こうこく, kōkoku), [[CM]] (シーエム, shī-emu)
@@ -50,11 +51,11 @@
 *Slovene: [[oglas]] {{m}}, [[reklama]] {{f}}
 *Spanish:  [[anuncio]] {{m}},  [[publicidad]] {{f}}, [[reclamo]] {{m}}
 *Swedish: [[annons]], [[annonsering]], [[reklam]]
-*[[Tamil]] : விளம்பரம்
-*[[Telugu]]: [[వ్యాపార ప్రకటన]]
+*Tamil : விளம்பரம்
+*Telugu: [[వ్యాపార ప్రకటన]]
 *Turkish: [[reklâm]], [[ilan]], [[duyuru]]
 *Vietnamese: [[quảng cáo]], [[giới thiệu]]
-*[[Volapük]]: [[noted]], [[reklam]], [[nunam]]
+*Volapük: [[noted]], [[reklam]], [[nunam]]
 {{bottom}}
 
 [[Category:1000 English basic words]]
