/* Etymology 1 - Middle English 'mille'*/ <mill#1771038>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,7 +8,8 @@
 *[[mil]]
 
 ===Etymology 1===
-Old English ''[[mylen]]''
+* Middle English ''[[mille]]''
+* Old English ''[[mylen]]''
 
 ====Noun====
 {{en-noun}}
