--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -94,12 +94,14 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 [[fr:sir]]
 [[io:sir]]
 [[it:sir]]
+[[kk:sir]]
 [[ku:sir]]
 [[hu:sir]]
 [[ja:sir]]
 [[pl:sir]]
 [[ru:sir]]
 [[sl:sir]]
+[[fi:sir]]
 [[vi:sir]]
 [[tr:sir]]
 [[zh:sir]]
