/* Translations */ is gender <badger#1786939>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -43,7 +43,7 @@
 *Greek: [[ασβός]] {{m}}
 *Hebrew: [[גיריט|גִּירִיט]] {{f}}
 *Hungarian: [[borz]]
-*Icelandic: [[greifingi]] {{g|Icelandic}}
+*Icelandic: [[greifingi]] {{m}}
 *Irish: [[broc]] {{g|Irish}}
 *Italian: [[tasso]] {{m}}
 *Japanese: [[アナグマ]]
