--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -68,6 +68,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 [[nl:dame]]
 [[nn:dame]]
 [[pl:dame]]
+[[ru:dame]]
 [[fi:dame]]
 [[vi:dame]]
 [[tr:dame]]
