/* Translations */ +Russian <consumption#1797668>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -11,28 +11,31 @@
 *Bulgarian: [[консумиране]] {{f}}, [[изразходване]] {{n}}
 *[[Catalan]]: [[consum]] {{m}}
 *Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
-{{mid}}
 *Finnish: [[kuluttaminen]], [[kulutus]]
 *French: [[consumer]]
+{{mid}}
 *Portuguese: [[consumo]] {{m}}
+*Russian: [[потребление]] (potreblénije) {{n}}
 {{bottom}}
 
 {{top|the amount consumed}}
 *Bulgarian: [[консумация]] {{f}}
 *[[Catalan]]: [[consum]] {{m}}
 *Czech: [[konzumace]] {{f}}, [[spotřeba]] {{f}}
-{{mid}}
 *Finnish: [[kulutus]]
 *French: [[consommation]] {{f}}
+{{mid}}
+*Russian: [[потребление]] (potreblénije) {{n}}
 {{bottom}}
 
 {{top|tuberculosis}}
 *Bulgarian: [[туберкулоза]] {{f}}
 *[[Catalan]]: [[tuberculosi]]
 *Czech: [[tuberkulóza]] {{f}}
-{{mid}}
 *Finnish: [[tuberkuloosi]]
 *French: [[tuberculose]] {{f}}
+{{mid}}
+*Russian: [[чахотка]] (čakhótka) {{f}}
 *Turkish: [[tüberküloz]]
 {{bottom}}
 
