An attempt to write pronunciation - to the best of my knowledge it is spee-sheez in the Commonwealth (NOT spee-seez) <species#1801965>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -4,6 +4,7 @@
 {{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
 ===Pronunciation===
+* IPA: /spiː'shiːz/
 *{{audio|en-us-species.ogg|Audio (US)}}
 
 ===Noun===
