/* French */ +Pronunciation; {{[[Template:M|m]]}} <cop#1802443>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -60,8 +60,10 @@ German [[Zopf]]
 ==French==
 ===Etymology===
 A shortened form of [[copain]].
+===Pronunciation===
+*[kɔp]
 ===Noun===
-#{{colloquial}} A [[friend]], a [[pal]].
+#{{colloquial}} {{m}} A [[friend]], a [[pal]].
 
 ----
 
