/* Noun */ {{[[Template:fr-noun-reg|fr-noun-reg]]|m}} — I think I'm getting the hang of this :-) <cop#1802530>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -63,7 +63,8 @@ A shortened form of [[copain]].
 ===Pronunciation===
 *[kɔp]
 ===Noun===
-#{{colloquial}} {{m}} A [[friend]], a [[pal]].
+{{fr-noun-reg|m}}
+#{{colloquial}} A [[friend]], a [[pal]].
 
 ----
 
