stroke order, etc. <月#1802938>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,5 +1,5 @@
 ==Translingual==
-{{Han stroke| The left-most sloping vertical stroke is done from top to bottom.  The top-most horizontal line, the right-most vertical line and the small mark at the bottom of it are done as one stroke, from top-left going clockwise.  The middle horizontal line is done from left to right.  The bottom horizontal line is done from left to right.}}{{-}}
+{{Han stroke|[[Image:月-order.gif]]}}
 ===Etymology===
 Pictographic representation, originally of the crescent moon.
 ===Han character===
@@ -12,20 +12,18 @@ Pictographic representation, originally of the crescent moon.
 ----
 ==Cantonese==
 ===Hanzi===
-{{yue-hanzi|jyut=|y=yut6}}
+{{yue-hanzi|jyut=[[jyut6]]|y=[[yut6]]}}
 # {{defn|Cantonese}}
 ----
 ==Japanese==
 [[Category:1000 Japanese basic words|つき]]
-
-
-
 ===Kanji===
 {{ja-kanji|grade=1|rs=月00}}
 ====Readings====
 {{ja-readings|on=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')|kun=[[つき]] (''tsuki'')}}
 
 ====Compounds====
+{{top4}}
 *[[月下氷人]]
 *[[月額]]
 *[[月刊]]
@@ -33,6 +31,7 @@ Pictographic representation, originally of the crescent moon.
 *[[月桂樹]]
 *[[月光]]
 *[[月賦]]
+{{mid4}}
 *[[月末]]
 *[[月曜]]、[[月曜日]]
 *[[月例]]
@@ -40,7 +39,7 @@ Pictographic representation, originally of the crescent moon.
 *[[月代]]
 *[[月並み]]
 *[[月日]]
-
+{{mid4}}
 *[[一月]]
 *[[二月]]
 *[[三月]]
@@ -48,12 +47,14 @@ Pictographic representation, originally of the crescent moon.
 *[[五月]]
 *[[六月]]
 *[[七月]]
+{{mid4}}
 *[[八月]]
 *[[九月]]
 *[[十月]]
 *[[十一月]]
 *[[十二月]]
 *[[日進月歩]]
+{{bottom}}
 
 ====Other info====
 When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 月 is pronounced as [[げつ]] (''getsu''). When used in compounds for modern months of the year, it is pronounced as [[がつ]] (''gatsu''). When used for poetic or lunar months, it is pronounced as [[つき]] (''tsuki'').
@@ -69,6 +70,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 ===Hanja===
 {{ko-hanja|hangeul=월|eumhun=달|rv=wol|mr=wŏl|y=wel}}
 # {{defn|Korean}}
+
 ----
 ==Mandarin==
 ===Hanzi===
@@ -76,6 +78,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 # {{defn|Mandarin}}
 
 ====Compounds====
+{{top4}}
 *[[月白]]
 *[[月白风情]]
 *[[月半]]
@@ -89,6 +92,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 *[[月俸]]
 *[[月宫]]
 *[[月光]]
+{{mid4}}
 *[[月华]]
 *[[月季]]
 *[[月经]]
@@ -102,6 +106,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 *[[月亮地儿]]
 *[[月亮门儿]]
 *[[月令]]
+{{mid4}}
 *[[月门]]
 *[[月末]]
 *[[月偏食]]
@@ -115,6 +120,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 *[[月食]]
 *[[月台]]
 *[[月台票]]
+{{mid4}}
 *[[月尾]]
 *[[月息]]
 *[[月下老人]]
@@ -127,6 +133,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 *[[月子]]
 *[[月子病]]
 *[[新月形面包]]
+{{bottom}}
 
 <!--
 For an example of a character with multiple pronunciations (and hence Romanizations), see the section "Pronounciation & Definition" in [[Wiktionary talk:Entries on Chinese characters | Talk]]
