--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -14,6 +14,7 @@
 {{mid}}
 *[[Korean]]: [[미국 영어]] ([[美國英語]])
 *[[Swedish]]: [[amerikansk engelska]]
+*[[Russian]]: [[американский английский ]]
 {{bottom}}
 
 [[Category:Regional English]]
