/* Translations - Korean */ <bubble#1811977>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -60,6 +60,7 @@ Partly imitative, also influenced by [[burble]].
 ;rise up in bubbles
 {{top}}
 *Finnish: [[kuplia]], [[poreilla]]
+*Korean: [[부글]]거리다 (bugeul-georida)
 {{mid}}
 *Swedish: [[bubbla]]
 {{bottom}}
