--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -9,6 +9,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 
 ===Pronunciation===
 *{{audio|en-us-island.ogg|Audio (US)}}
+*:[[Rhymes:English:-ænd|Rhymes: -ænd]]
 
 ===Noun===
 {{en-noun}}
