--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -35,7 +35,7 @@
 *:Roman: [[ja#Serbian|ja]]
 *Slovak: [[no#Slovak|no]] <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
 *Spanish: [[sip]]
-*Vietnamese: [[ờ]] (informal; does translate as "yeah")
+*Vietnamese: [[ừ]] (informal; does translate as "yeah")
 *Volapük: [[si#Volapük|si]]
 *Welsh: [[iah]] (pronounced "ee-ah"), Welsh-Celtic precursor of English "yeah."
 
