--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -7,5 +7,7 @@
 * The term "grognard capture" extends from this idea of the ultra-hardcore gamer to the consideration of how such gamers' expectations regarding the nature of a game, sequel, or new edition in any of the above genres must be balanced against the difficulties that this may cause new players unfamiliar with the genre, game, or player culture; grognard capture occurs when balance is not met and the new work begins excluding the possibility of new players.  This phrase was coined and later popularized by [[Greg Costikyan]] [http://www.costik.com/weblog/2003/08/grognard-capture.html].
 
 {{Uncategorized|October 2006}}
+no idea how to move this to the right category
+http://en.wikipedia.org/wiki/Computer_and_video_game_culture#Slang_and_terminology
 
 [[fr:Grognard]]
