robot  Adding: [[el:fraction]] <fraction#1823074>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -76,6 +76,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * {{R:WordNet 2003|fraction}}
 
 [[et:fraction]]
+[[el:fraction]]
 [[fr:fraction]]
 [[io:fraction]]
 [[it:fraction]]
