--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -77,6 +77,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 [[it:multiplication]]
 [[pl:multiplication]]
 [[ru:multiplication]]
+[[simple:multiplication]]
 [[fi:multiplication]]
 [[ta:multiplication]]
 [[vi:multiplication]]
