--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -77,6 +77,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 [[hu:whistle]]
 [[ja:whistle]]
 [[ru:whistle]]
+[[simple:whistle]]
 [[fi:whistle]]
 [[ta:whistle]]
 [[vi:whistle]]
