--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -52,6 +52,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *Finnish: [[osa]]
 {{mid}}
 *German: [[Teil]] ''m''
+*Malayalam: [[വിഭാഗം]] (vibhaagam)
 {{bottom}}
 
 '''arithmetic: process of dividing a number by another'''
