robot  Adding: [[io:bid]] <bid#1834372>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -87,6 +87,7 @@ A conflation of two Old English verbs: [[biddan]] ‘ask, demand’, and [[beoda
 [[ar:bid]]
 [[fr:bid]]
 [[ko:bid]]
+[[io:bid]]
 [[it:bid]]
 [[hu:bid]]
 [[ru:bid]]
