/* Noun */ + дивизия <division#1834745>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -92,7 +92,7 @@ Afrikaans: [[deel]]
 *German: [[Abteilung]] ''f'', [[Division]] ''f''
 {{mid}}
 *Polish: [[dywizja]] ''f''
-*Russian: [[подразделение]] ''n''
+*Russian: [[дивизия]] {{f}}, [[подразделение]] ''n''
 *Romanian: [[impartire]] ''f''
 *Slovene: [[divizija]] ''f''
 *Swedish: [[division#Swedish|division]] {{c}}
