--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -54,5 +54,6 @@ From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 [[Category:sr:Fruits]]
 
 [[it:dud]]
+[[ru:dud]]
 [[vi:dud]]
 [[zh:dud]]
