--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -1,31 +1,55 @@
 ==English==
-
 ===Etymology===
-From {{L.}} [[consumere]].
+{{L.}} ''[[consumere]]''
 
 ===Pronunciation===
-'''con-sume*'''
-*{{IPA|/kɒnsjuːm/}}
-<!-- * {{SAMPA|//}} --> {{rfp}}
-kohn-SUME
+*(''UK''): {{IPA|/kənˈsjuːm/}}, {{SAMPA|/k@n"sju:m/}}
+*(''US''): {{AHD|kən-so͞om}}, {{IPA|/kənˈsuːm/}}, {{SAMPA|/k@n"su:m/}}
 *{{audio|en-us-consume.ogg|Audio (US)}}
 
-===Transitive verb===
+===Verb===
 {{en-verb|consum|ing}}
 
-# To [[use]] up.
-#* ''The power plant '''consumes''' 30 tons of coal per hour.''
-# To [[occupy]] (one’s attention or thoughts). 
-#* ''He was '''consumed''' with desire.''
+#{{transitive}} To [[use]].
+#:''The power plant '''consumes''' 30 tons of coal per hour.''
+#{{transitive}} To [[eat]].
+#{{transitive}} To [[occupy]] (one’s attention or thoughts). 
+#:''Desire '''consumed''' him.''
+#{{transitive}} To [[destroy]] completely.
+#:''The building was consumed by fire.''
+
+====Synonyms====
+*(''use''): [[burn]] (''of energy''), [[use]], [[use up]]
+*(''eat''): [[devour]], [[eat]], [[swallow]]
+*(''occupy (one's attention or thoughts)''): [[occupy]], [[overcome]], [[take over]]
+*(''destroy completely''): [[annihilate]], [[destroy]], [[devastate]], [[eliminate]], [[obliterate]], [[raze]] (''of a building''), [[wipe out]]
+
+====Derived terms====
+*[[consumer]]
+*[[consumption]]
+*[[consumptive]]
 
 ====Translations====
-{{top|to use up}}
+{{top|to use}}
 *Dutch: [[consumeren]], [[verbruiken]]
+*French: [[consommer]]
 {{mid}}
+*Italian: [[consumare]]
+{{bottom}}
+
+{{top|to eat}}
+*French: [[consommer]]
+{{mid}}
+*Italian: [[consumare]]
 {{bottom}}
 
 {{top|to occupy}}
 *Dutch: [[bezighouden]], [[verteren]]
+{{mid}}
+{{bottom}}
+
+{{top|to destroy completely}}
+*French: [[consumer]]
 {{mid}}
 {{bottom}}
 
@@ -35,11 +59,6 @@ kohn-SUME
 *{{ttbc|Latin}}: [[consumere]]
 *{{ttbc|Spanish}}: [[consumir]]
 *{{ttbc|Turkish}}: [[tüketmek]]
-
-===Derived terms===
-*[[consumer]]
-*[[consumption]]
-*[[consumptive]]
 
 [[fr:consume]]
 [[io:consume]]
