--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -11,28 +11,28 @@
 ===Noun===
 {{en-noun}}
 
-# A [[wager]].
+# A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forcast the outcome of an event.
 # A degree of [[certainty]].
 #:''It's a good '''bet''' that it will rain tomorrow.''
 #:''It's an even bet that Jim will come top of the maths test tomorrow''
 [[Category:Betting]]
 
 ====Translations====
-;a wager (1)
+;a wager 
 {{top}}
 *Dutch: [[weddenschap]] ''f''
 *Finnish: [[veto]]
 *German: [[Wette]] ''f''
 *Greek: [[στοίχημα]] [ˈstiçiˌma] ''n''
-{{mid}}
 *Italian: [[scommessa]] ''f''
+{{mid}}
 *Latvian: [[likme]] ''f''
 *Polish: [[zakład]] {{m}}
 *Slovene: [[stava]] {{f}}
 *Swedish: [[vad#Noun|vad]] ''n''
 {{bottom}}
 
-;A degree of certainty (2)
+;A degree of certainty 
 {{top}}
 *Dutch: [[waarschijnlijkheid]] ''f''
 {{mid}}
