remove numbering from trans descript. <bet#1857993>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -55,7 +55,7 @@
 #: ''You '''bet'''!''
 
 ====Translations====
-;To make a guess about the outcome of an event (1)
+;To make a guess about the outcome of an event
 {{top}}
 *Breton: [[klaoustreañ]]
 *Dutch: [[gokken]]
@@ -72,7 +72,7 @@
 *Swedish: [[slå vad]]
 {{bottom}}
 
-;To be sure of something (2)
+;To be sure of something 
 {{top}}
 *Dutch: [[er op kunnen rekenen]]
 {{mid}}
