--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -78,6 +78,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[io:though]]
 [[it:though]]
 [[hu:though]]
+[[simple:though]]
 [[fi:though]]
 [[vi:though]]
 [[zh:though]]
