--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -80,6 +80,7 @@
 *[[Lower Sorbian]]: [[swinja]]
 *Macedonian: [[свиња]] (svinja) {{f}}
 *Malay: [[babi]], [[khinzir]]
+*Malayalam: [[പന്നി]] (panni)
 *[[Maltese]]: [[ħanżir]]
 *[[Maori]]: [[poaka]]
 *Norwegian: [[svin]] {{n}}, [[gris]] {{m}}
