/* Translations */ Finnish <break#1867013>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -214,7 +214,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{top}}
 *Danish: [[knække]], [[knuse]]
 *Dutch: [[breken]]
-*Finnish: [[murtaa]]
+*Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
 *French: [[briser]]
 *German: [[brechen]]
 *Hungarian: [[elkedvtelenít]]
