--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -35,6 +35,7 @@
 '''measuring device'''
 {{top}}
 *Dutch: [[kwadrant]]  ''n''
+*Finnish: [[kvadrantti]]
 *German: [[Quadrant]] {{m}}
 {{mid}}
 {{bottom}}
