--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -1,10 +1,13 @@
+{{wikipedia}}
+
 ==English==
 
 ===Pronunciation===
 * {{IPA|/'mʌskræt/}}
 
 ===Noun===
-{{wikipedia}}
+[[Image:Common_Muskrat_FWS.jpg|thumb|muskrat]]
+
 {{en-noun}}
 # A large [[aquatic]] [[fur-bearing]] [[rodent]], so called from its [[musky]] [[odour]] and because it resembles a [[rat]].
 
