--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -49,7 +49,7 @@
 *[[Occitan]]: [[mostèla]], [[polida]]
 *Polish: [[łasica]] '' ''
 *Portuguese: [[doninha]]
-*Romanian: [[nevăstuica]]
+*Romanian: [[nevăstuică]] ''f''
 *[[Romansh]]: [[mustaila]]
 *[[Romany]]: [[boriori]] ''f''
 *Russian: [[ласка]] ([[laska]]) '' ''
