--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -38,6 +38,7 @@ Old English ''[[leþer]]''
 *Italian: [[cuoio]] {{m}}
 *Korean: [[가죽]] (gajug, -juk)  
 *Lithuanian: [[oda]] {{f}}
+*Malayalam: [[തോല്‍]] (thOl)
 *Russian: [[кожа]] (kóža) {{f}}
 *Serbian:
 *:Latin: [[koža#Serbian|koža]] {{f}}
