--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -4,8 +4,9 @@
 [[Onomatopoeic]]
 
 ===Pronunciation===
+*{{IPA|kwæk}}
 *{{audio|en-us-quack.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-æk|-æk]]
+*{{Rhymes|æk}}
 
 ===Noun===
 {{en-noun}}
