--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -1,3 +1,4 @@
+[[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
 ==English==
 ===Etymology===
 Partly imitative, also influenced by [[burble]].
