robot  Adding: [[fa:bind]] <bind#1892383>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -42,6 +42,7 @@ From Old English [[bindan]].
 [[Category:English irregular verbs]]
 
 [[es:bind]]
+[[fa:bind]]
 [[fr:bind]]
 [[gl:bind]]
 [[ko:bind]]
