robot  Adding: [[fa:rabbit]] <rabbit#1895609>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -150,6 +150,7 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[bg:rabbit]]
 [[el:rabbit]]
 [[es:rabbit]]
+[[fa:rabbit]]
 [[fr:rabbit]]
 [[hy:rabbit]]
 [[io:rabbit]]
