--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -59,7 +59,6 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{ELchar|[[θεωρία]
 *[[probability theory]]
 *[[proof theory]]
 *[[quantum field theory]]
-{{mid3}}
 *[[rational choice theory]]
 *[[set theory]]
 *[[signal theory]]
@@ -129,6 +128,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{ELchar|[[θεωρία]
 *Portuguese: [[teoria#Portuguese|teoria]] {{f}}
 *Russian: [[теория]] (teórija) {{f}}
 *Spanish: [[teoría]] {{f}}
+*Swedish: [[teori]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|a field of study in mathematics}}
