--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -22,6 +22,7 @@
 *German: [[Quadrant]] {{m}}
 *Bahasa Indonesia: [[Kuadran]] ({n}}
 {{mid}}
+*Swedish: [[kvadrant]] {{c}}
 {{bottom}}
 
 '''fourth of a circle'''
