--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -19,6 +19,7 @@
 #[[determined|Determined]] or [[insistent]].
 #:He was '''bent''' on going to Texas, but not even he could say why.''
 #Of a person leading a life of [[crime]].
+#{{italbrac|slang|football}} [[inaccurate]] at [[shooting]]
 
 ====Synonyms====
 *(1): [[crooked]]
