--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -72,6 +72,7 @@
 [[hu:advertisement]]
 [[pt:advertisement]]
 [[simple:advertisement]]
+[[sk:advertisement]]
 [[fi:advertisement]]
 [[ta:advertisement]]
 [[vi:advertisement]]
