--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,6 +1,6 @@
 ==English==
-
 {{wikipedia}}
+[[Image:Ilder.jpg|thumb|Ferrets (Mustela putorius)]]
 ===Etymology===
 From Old French ''[[fuiret]]'' (modern ''[[furet]]''), from from late Latin ''[[furo]]'' ‘thief, ferret’, diminutive of Latin ''[[fur#Latin|fur]]'' ‘thief’.
 
