--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -64,7 +64,7 @@ From Northern [[French]]
 *[[Interlingua]]: [[conilio]]
 *Irish: [[cóinín]]
 *Italian: [[coniglio]] {{m}}
-*Japanese: [[兎]] ([[ウサギ]], usagi)
+*Japanese: [[兎]] ([[うさぎ]], usagi) [[ウサギ]]
 *[[Judeo-Spanish]]: [[konejo]]
 *Korean: [[토끼]] (tokki)
 *[[Kurdish]]:
