trans, syns <dummy#1913566>

--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -23,11 +23,14 @@
 # {{complang}} An unused [[parameter]] or value.
 #:* If <code>flag1</code> is false, the other parameters are '''dummies'''.
 
+====Synonyms====
+*(''Something made to look like a person'') [[mannequin]]
+*(''Something to calm a baby'') [[pacifier]] {{italbrac|US}}, [[soother]] {{italbrac|Canada}}
+
 ====Related terms====
 *[[dumb]]
-*[[dummy up]]
 *[[dummy out]]
-*[[mannequin]]
+*[[dummy up]]
 
 ====Translations====
 '''something constructed with the size and form of a human'''
@@ -39,7 +42,10 @@
 '''for a baby'''
 {{top}}
 *Dutch: [[fopspeen]], [[speen]] {{m}}
+*Finnish: [[tuti]]
+*French: [[suce]]
 {{mid}}
+*German: [[Schnuller]] {{m}}
 *Italian: [[ciuccio]] {{m}}
 *Mandarin: [[奶嘴]] ([[nǎizuǐ]])
 {{bottom}}
@@ -54,6 +60,9 @@
 *[[dud]]
 *[[fake]]
 *[[feint]]
+
+===External links===
+*http://www.languagehat.com/archives/002594.php
 
 [[fr:dummy]]
 [[io:dummy]]
