--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -75,8 +75,21 @@
 #: ''A diver who stays deep for too long must ascend very slowly in order to prevent the bends.''
 # {{heraldry}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] [[one third]].
 
+====Derived terms====
+*[[bend sinister]]
+*[[bendlet]]
+*[[bendy]]
+*[[in bend]]
+*[[sheet bend]]
+*[[string bend]]
+
+====Related terms====
+*[[bent]]
+
+====Translations====
 {{trans-top|curve}}
 *Finnish: [[mutka]]
+*German: [[Kurve]] {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -94,29 +107,9 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-====Derived terms====
-*[[bend sinister]]
-*[[bendlet]]
-*[[bendy]]
-*[[in bend]]
-*[[sheet bend]]
-*[[string bend]]
-
-====Related terms====
-*[[bent]]
-
-====Translations====
-;curve
-{{top}}
-*Finnish: [[mutka]]
-{{mid}}
-*German: [[Kurve]] {{f}}
-*Telugu: [[వంపు]] (vaMpu)
-{{bottom}}
-;diving disease
-{{top}}
-*Finnish: [[sukeltajantauti]]
-{{bottom}}
+====Translations to be categorized====
+{{checktrans}}
+*{{ttbc|Telugu}}: [[వంపు]] (vaMpu)
 
 ===References===
 {{R:Heraldry 1862}}
