--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -10,27 +10,32 @@
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa'')]]
 {{en-noun|pl2=swine}}
 
-#Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
-#:''The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.''
-#The [[edible]] [[meat]] of such an animal; [[pork]].
-#:''Some religions prohibit their adherents from eating '''pig'''.''
-#A [[greedy]] person; someone who overeats or eats rapidly and noisily.
-#:''You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!''
-#A [[nasty]] or [[disgusting]] person.
-#:''She considered him a '''pig''' as he invariably stared at her bosom when they talked.''
-#A [[dirty]] or [[slovenly]] person.
-#:''He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.''
-#{{cattag|derogatory slang}} A [[police officer]].
-#:''"Don't give in to the '''pigs'''!" shouted the protester, as he was arrested.''
+# Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
+#:* The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.
+# {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
+#:* Some religions prohibit their adherents from eating '''pig'''.
+# A [[greedy]] person; someone who overeats or eats rapidly and noisily.
+#:* You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!
+# A [[nasty]] or [[disgusting]] person.
+#:* She considered him a '''pig''' as he invariably stared at her bosom when they talked.
+# A [[dirty]] or [[slovenly]] person.
+#:* He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.
+# {{context|derogatory slang}} A [[police officer]].
+#:* The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.
 # {{informal}} A [[difficult]] [[problem]].
-#:''Hrm...this one's a real '''pig'''; I've been banging my head against the wall over it for hours!''
-# {{tag|countable and uncountable}} A [[block]] of [[cast]] [[metal]].
-#:''The conveyor carried the '''pigs''' from the smelter to the freight cars.''
-#:''After the ill advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.''
-#The [[mold]] in which a block of metal is cast.
-#:''The '''pig''' was cracked, and molten metal was oozing from the side.''
-#{{engineering}} A device for cleaning or inspecting the inside of an oil or gas pipline, or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
-#:''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
+#:* Hrm...this one's a real '''pig''': I've been banging my head against the wall over it for hours!
+# {{context|countable|and|uncountable}} A [[block]] of [[cast]] [[metal]].
+#:* The conveyor carried the '''pigs''' from the smelter to the freight cars.''
+#:* After the ill advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.
+# The [[mold]] in which a block of metal is cast.
+#:* The '''pig''' was cracked, and molten metal was oozing from the side.
+# {{engineering}} A device for cleaning or inspecting the inside of an oil or gas pipline, or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
+#:* Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.
+
+====Derived terms====
+*[[piggery]]
+*[[piggish]]
+*[[piggy]]
 
 ====Translations====
 {{top|mammal of genus ''Sus''}}
@@ -178,21 +183,18 @@
 {{mid}}
 {{bottom}}
 
-===Derived terms===
+===Compound terms===
 {{top3}}
 *[[blind pig]]
 *[[bush pig]]
 *[[dish pig]]
 *[[flying pig]]
-*[[guinea pig]]<!--related linguistic expression, though not species of course -->
+*[[guinea pig]]
 *[[if pigs had wings]]
 *[[in a pig's eye]]
 *[[pig bed]]
-*[[piggery]]
-*[[piggish]]
-*[[piggy]]
-{{mid3}}
 *[[piggy bank]]
+{{mid3}}
 *[[piggyback]]
 *[[pigheaded]]
 *[[pig in a blanket]]
@@ -202,9 +204,9 @@
 *[[pig Latin]]
 *[[pig lead]]
 *[[piglet]]
-{{mid3}}
 *[[pig-out]]
 *[[pigpen]]
+{{mid3}}
 *[[pigskin]]
 *[[pigsty]]
 *[[pigtail]]
