--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,8 +23,15 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 *10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
 
 ====Translations====
+;a thousand trillion trillion, 10<sup>27</sup>
 {{top}}
-&nbsp;
+*German: [[Quadrilliarde]]
+{{mid}}
+{{bottom}}
+
+;a quadrillion quintillion, 10<sup>48</sup>
+{{top}}
+*German: [[Oktillion]] {{f}}
 {{mid}}
 {{bottom}}
 
