/* Translations */ +Czech <then#1925096>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -32,6 +32,7 @@ Old English ''[[þonne]]''
 
 '''at that time'''
 {{top}}
+*Czech: [[tehdy]]
 *Dutch: [[toen]]
 *Esperanto: [[tiam]]
 *Finnish: [[silloin]] [[:fi:silloin|^]]
@@ -50,6 +51,7 @@ Old English ''[[þonne]]''
 
 '''soon afterward'''
 {{top}}
+*Czech: [[pak]], [[potom]]
 *Dutch: [[toen]] ''past tense'', [[dan]] ''present and future tenses''
 *Esperanto: [[tiam]]
 *Finnish: [[sitten]] [[:fi:sitten|^]]
@@ -67,6 +69,7 @@ Old English ''[[þonne]]''
 
 '''next in order'''
 {{top}}
+*Czech: [[pak]], [[potom]]
 *Dutch: [[dan]]
 *Esperanto: [[tiam]]
 *Finnish: [[sitten]] [[:fi:sitten|^]]
@@ -86,6 +89,7 @@ Old English ''[[þonne]]''
 '''in that case'''
 {{top}}
 *Arabic: {{ARchar|[[ثم]]}} {{Unicode|(θúmma)}}
+*Czech: [[pak]], [[potom]]
 *Dutch: [[dan]]
 *Esperanto: [[tiam]]
 *Finnish: [[niin]] [[:fi:niin|^]]
