/* Translations */ Fix Czech ones <at#1925729>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -89,7 +89,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *[[Breton]]: [[da#Breton|da]]
 *Bulgarian: [[в#Bulgarian|в]] (v)
 *Catalan: [[a]]
-*Czech: [[u#Czech|u]]
+*Czech: [[v#Czech|v]]
 *Danish: [[på]]
 *Dutch: [[om]]
 *Esperanto: [[je#Esperanto|je]]
@@ -121,7 +121,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Arabic: {{ARchar|[[في]]}} (fi)
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
 *Chinese: [[在]] (zài)
-*Czech: [[u#Czech|u]]
+*Czech: [[na#Czech|na]], [[do#Czech|do]]
 *Danish: [[til]]
 *Dutch: [[op]]
 *Esperanto: [[al#Esperanto|al]]
