/* Translations */ sq: lepuri i gropave (definite form) => lepur i gropave (indefinite form) <rabbit#1929134>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -32,7 +32,7 @@ From Northern [[French]]
 ====Translations====
 '''mammal'''
 {{top}}
-*Albanian: [[lepuri i gropave]]
+*Albanian: [[lepur i gropave]]
 *Arabic: {{ARchar|[[ارنب|أرْنَب]]}}
 *[[Basque]]: [[untxi]]
 *[[Belarusian]]: [[трусяня]]/[[трусяне]], [[трус]]
