robot  Adding: [[fa:maximum]], [[io:maximum]] <maximum#1931350>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -69,7 +69,9 @@ MAAHX-im-muhm
 
 [[de:maximum]]
 [[et:maximum]]
+[[fa:maximum]]
 [[fr:maximum]]
+[[io:maximum]]
 [[hu:maximum]]
 [[nl:maximum]]
 [[ru:maximum]]
