--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -12,6 +12,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]].
 ====Translations====
+*Finnish: [[susi]], [[suutari]]
 *German: [[Blindgänger]] ''m''
 ----
 
