--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -14,6 +14,7 @@
 *Finnish: [[kuluttaminen]], [[kulutus]]
 *French: [[consommer]], [[consumer]]
 {{mid}}
+*Japanese: [[消費]]
 *Portuguese: [[consumo]] {{m}}
 *Russian: [[потребление]] (potreblénije) {{n}}
 {{bottom}}
