robot  Adding: [[io:multiplication]] <multiplication#1933343>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -73,6 +73,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 
 [[de:multiplication]]
 [[fr:multiplication]]
+[[io:multiplication]]
 [[id:multiplication]]
 [[it:multiplication]]
 [[pl:multiplication]]
