/* Translations to be categorized */ <bend#1934061>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -53,12 +53,12 @@
 
 ====Translations to be categorized====
 {{trans-top}}
-*{{ttbc|Dutch}}: [[buigen]], [[plooien]] <!-- not checked -->
+*{{ttbc|Dutch}}: [[buigen]], [[plooien]] 
 *{{ttbc|French}}: [[courber]]
 *{{ttbc|Ido}}: [[kurv-igar]]
-*{{ttbc|Indonesian}}: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]] <!-- not checked -->
+*{{ttbc|Indonesian}}: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]] 
 *{{ttbc|Italian}}: [[piegarsi]]
-*{{ttbc|Japanese}}: [[曲げる]] ([[まげる]], mageru) <!-- not checked -->
+*{{ttbc|Japanese}}: [[曲げる]] ([[まげる]], mageru) 
 *{{ttbc|Korean}}: [[구부리다]]
 *{{ttbc|Norwegian}}: [[bøye]]
 *{{ttbc|Romanian}}: [[indoi]]
