robot  Adding: [[ar:then]] <then#1942797>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -165,6 +165,7 @@ Old English ''[[þonne]]''
 [[Category:100 English basic words]]
 [[Category:Time]]
 
+[[ar:then]]
 [[zh-min-nan:then]]
 [[el:then]]
 [[fa:then]]
