--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -181,6 +181,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{ELchar|[[θεωρία]
 [[Category:Check translations]]
 [[Category:Greek derivations]]
 
+[[ar:theory]]
 [[el:theory]]
 [[fr:theory]]
 [[hy:theory]]
@@ -193,4 +194,5 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{ELchar|[[θεωρία]
 [[fi:theory]]
 [[ta:theory]]
 [[vi:theory]]
+[[tr:theory]]
 [[zh:theory]]
