--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -78,7 +78,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Korean: [[부러지다]] (bureojida)
 *Romanian: a (se) [[frânge]], a (se) [[rupe]]
-*Russian: [[разбить]], [[расколотить]]
+*Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
 *Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
 *Spanish: [[romper]]
 *Swedish: [[gå sönder]]
@@ -99,7 +99,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러지다]] (bureojida)
 *Romanian: a (se) [[frânge]]
-*Russian: [[перелом]] ''m''
+*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
 *Slovene: [[zlomiti se]]
 *Swedish: [[brytas]]
 {{bottom}}
@@ -115,7 +115,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Japanese: [[壊れる]] (kowareru)
 {{mid}}
 *Korean: [[부서지다]] (buseojida)
-*Russian: [[сломаться]]
+*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
 *Slovene: [[pokvariti se]]
 *Swedish: [[gå sönder]]
 *Swahili: [[kuvunjika]]
@@ -130,6 +130,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Japanese: [[休憩する]] (kyūkei-suru)
 {{mid}}
 *Korean: [[쉬다]] (swida)
+*Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
 *Swedish: [[avbryta]], [[bryta]]
 {{bottom}}
 
@@ -168,6 +169,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
 *Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
 *Romanian: [[rupe]], [[frânge]]
+*Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
 *Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
 *Spanish: [[romper]], [[quebrar]]
 *Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
@@ -185,6 +187,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
 *Romanian: [[frânge]]
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta]]
 {{bottom}}
@@ -200,6 +203,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta]]
 {{bottom}}
@@ -215,6 +219,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[부수다]] (busuda)
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[pokvariti]]
 *Swedish: [[ha sönder]], [[ta sönder]]
 *Swahili: [[kuvunja]]
@@ -231,6 +236,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[꺾다]] (kkeokkda)
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta ned]]
 {{bottom}}
@@ -246,6 +252,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
 *Korean: [[깨다]] (kkaeda)
+*Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
 *Slovene: [[prekršiti]]
 *Swedish: [[bryta]]
 *Telugu: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
@@ -307,6 +314,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *French: [[espace]] {{m}}, [[ouverture]] {{f}}
 *German: [[Öffnung]] ''f'', [[Spalt]] ''m''
 {{mid}}
+*Russian: [[разлом]] (razlóm)
 *Japanese: [[割れ目]] (wareme), [[隙間]] (sukima)
 {{bottom}}
 
@@ -320,6 +328,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Italian: [[pausa#Italian|pausa]] ''f''
 *Japanese: [[休憩]] (kyūkei)
 *Polish: [[przerwa]]
+*Russian: [[перерыв]] (p'e'rerýv)
 *Swedish: [[avbrott]] ''n'', [[rast]] ''c'', [[paus]] ''c''
 {{bottom}}
 
