--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -98,6 +98,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[Category:1000 English basic words]]
 
 [[ang:simple]]
+[[ar:simple]]
 [[et:simple]]
 [[es:simple]]
 [[fa:simple]]
