tense templates <ferret#1945255>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -19,26 +19,26 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]''), from from {{LL.}} ''[[furo]]
 *Albanian: [[qelbësi]]
 *Basque: [[hudo]]
 *Belarusian: [[тхор афрыканскі]]
-*Bosnian: [[lasica]] ''f''
+*Bosnian: [[lasica]] {{f}}
 *Breton: [[fured]]
 *Bulgarian: [[пор]] (por)
 *Catalan: [[furó]], [[fura]]
 *Croatian: [[tvor]]
 *Czech: [[fretka]]
-*Danish: [[fritte]] ''c''
-*Dutch: [[fret]] ''m''
+*Danish: [[fritte]] {{c}}
+*Dutch: [[fret]] {{m}}
 *Esperanto: [[furo]]
 *Estonian: [[tuhkur]], [[tőhk]]
 *Finnish: [[fretti]]
-*French: [[furet]] ''m''
+*French: [[furet]] {{m}}
 *Frisian: [[fret]]
 *Friulian: [[pudîs blanc]]
 *Galician: [[furón]]
-*German: [[Frettchen]] ''n''
+*German: [[Frettchen]] {{n}}
 *Greek: [[κουνάβι]] {{n}}, [[νυφίτσα]] {{f}}
 *Hungarian: [[vadászgörény]]
 *Irish: [[cat coille]], [[toghán]]
-*Italian: [[furetto]] ''m''
+*Italian: [[furetto]] {{m}}
 *Japanese: [[フェレット]] (feretto)
 {{trans-mid}}
 *Latvian: [[okšķeris]]
@@ -58,8 +58,8 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]''), from from {{LL.}} ''[[furo]]
 *Scottish Gaelic: [[fearaid]]
 *Serbian: [[твор]] ([[tvor]])
 *Slovak: [[Fretka tchorovitá]]
-*Slovenian: [[beli dihur]] ''m''
-*Spanish: [[hurón]] ''m''
+*Slovenian: [[beli dihur]] {{m}}
+*Spanish: [[hurón]] {{m}}
 *Swedish: [[tamiller]]
 *Turkish: [[yaban]], [[dağ gelinciği]]
 *Ukrainian: [[тхiр африканский]] ([[thir afrikanskij]])
