--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,21 +1,1 @@
-==English==
-
-===Noun===
-'''pusillanimity'''
-# The quality or state of being [[pusillanimous]]; [[pusillanimousness]].
-* '''1685'''.  [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
-*:132. And although thou often fallest, and seest thy '''Pusillanimity''', and endeavour to get courage, and afflict not thy self; because what God doth not do in forty Years, he sometimes doth in an instant, with a particular Mystery, that we may live low and humble, and know that ‘tis the Work of his powerful Hand, to free us from Sins.
-
-====Related terms====
-*[[pusillanimous]]
-*[[pusillanimousness]]
-*[[cowardice]]
-*[[cowardliness]]
-*[[cravenness]]
-*[[faint-heartedness]]
-
-[[Category:English nouns]]
-[[Category:English abstract nouns]]
-
-[[ru:pusillanimity]]
-[[vi:pusillanimity]]
+Pusillanimity (derived from "great-souled") is the virtue of being great of mind and heart. It encompasses, usually, a refusal to be petty, a willingness to face danger, and actions for noble purposes. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
