--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,1 +1,3 @@
-Pusillanimity (derived from "great-souled") is the virtue of being great of mind and heart. It encompasses, usually, a refusal to be petty, a willingness to face danger, and actions for noble purposes. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
+Pusillanimity (from the ecclesiastical Latin pusillanimis, a translation of the Greek olugopsukhos), from pusillus ‘very small’ + animus ‘mind,’ + -ous) is the vice of being timid and cowardly, and thus not living up to one's full [[potential]]. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
+
+As an adjective, the concept is expressed as "pusillanimous," i.e. "He is rather pusillanimous."
