--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -2,6 +2,6 @@ Pusillanimity (from the ecclesiastical Latin pusillanimis, a translation of the 
 
 As an adjective, the concept is expressed as "pusillanimous," i.e. "He is rather pusillanimous."
 
-[[Category:Vices]]
+[[Category:Vice]]
 [[Category:Aristotle]]
 [[Category:Rhetoric]]
