--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -16,7 +16,7 @@ From Northern [[French]]
 {{en-noun}}
 # Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
 # Any of a number of [[small]] [[hare]]s.
-# The [[fur]] of a [[rabbit]] typically used to imitate another [[animal]]'s fur.
+# The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
 # A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can [[win]] or to help another break a [[record]]; a [[pacesetter]]. 
 #{{cricket}} a very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]]
 #{{Colloquial}} Someone new to something.
