--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -185,7 +185,7 @@ Latin [[milium]]
 ==Scottish Gaelic==
 
 ===Verb===
-'''Mill'''
+'''Mill''' (''present participle'' '''a' milleadh''', ''simple past'' '''mhill''', ''past participle'' '''millte''')
 
 # To [[destroy]], to [[ruin]].
 
