--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -70,6 +70,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 
 [[Category:1000 English basic words]]
 
+[[ar:whistle]]
 [[fa:whistle]]
 [[fr:whistle]]
 [[io:whistle]]
