--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -41,55 +41,56 @@
 *[[glassblower]]
 
 ====Translations====
-produce an air current 
-{{top}}
+{{trans-top|produce an air current}} <!--1-->
 *Dutch: [[blazen]]
+*Finnish: [[puhaltaa]]
 *French: [[souffler]]
 *German: [[blasen]], [[pusten]], [[wehen]]
 *Hungarian: [[fúj]]
 *Korean: [[불다]] (bulda)
-{{mid}}
+{{trans-mid}}
 *Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
 *Slovene: [[pihati]]
 *Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
-{{bottom}}
-be propelled by an air current
-{{top}}
+{{trans-bottom}}
+
+{{trans-top|be propelled by an air current}} <!--2-->
+*Finnish: [[puhaltua]]
 *German: [[wehen]] 
 *Korean: [[불리다]] (bullida)
-{{mid}}
+{{trans-mid}}
 *Vietnamese: [[bay]]
-{{bottom}}
+{{trans-bottom}}
 
-explode <!--3-->
-{{top}}
+{{trans-top|explode}} <!--3-->
 *Dutch: [[springen]], [[ontploffen]]
+*Finnish: [[räjähtää]]
 *French: [[exploser]]
 *German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
-{{mid}}
+{{trans-mid}}
 *Korean: [[터지다]] (teojida) 
 *Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
 *Vietnamese: [[nổ]]
-{{bottom}}
+{{trans-bottom}}
 
-be very undesirable (see also suck) <!--4-->
-{{top}}
+{{trans-top|be very undesirable}} <!--4-->
+*Finnish: [[olla]] [[syvä|syvältä]]
 *Korean: [[제기랄]] (jegiral) (''interjection'') 
-{{mid}}
+{{trans-mid}}
 *Vietnamese: [[tẽn tò]], [[tẽn]], [[thẹn thò]], [[thẹn]]
-{{bottom}}
+{{trans-bottom}}
 
-(of a cetacean) exhale visibly through the spout the seawater <!--5-->
-{{top}}
+{{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--5-->
 *Dutch: [[spuiten]]
+*Finnish: [[suihkuttaa]]
 *Korean: [[뿜다]] (ppumda) 
-{{mid}}
+{{trans-mid}}
 *Vietnamese: [[phun]] [[nước]]
-{{bottom}}
+{{trans-bottom}}
 
-propel by an air current <!--6-->
-{{top}}
+{{trans-top|propel by an air current}} <!--6-->
 *Dutch: [[blazen]]
+*Finnish: [[puhaltaa]]
 *German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 *Korean: [[불다]] (bulda)
 {{mid}}
@@ -97,35 +98,37 @@ propel by an air current <!--6-->
 *Vietnamese: [[thở]], [[thổi]]
 {{bottom}}
 
-squander <!--7-->
-{{top}}
+{{trans-top|squander}} <!--7-->
+*Finnish: [[tuhlata]], [[törsätä]]
 *Korean: [[날리다]] (nallida)
-{{mid}}
+{{trans-mid}}
 *Russian: [[продувать]]/[[продуть]] (produvát'/produt')
 *Vietnamese: [[xài phí]], [[phung phí]]
-{{bottom}}
-fellate <!--8-->
-{{top}}
+{{trans-bottom}}
+
+{{trans-top|fellate}} <!--8-->
+*Finnish: [[ottaa]] [[suu|suihin]]
 *French: [[sucer]], [[tailler]] une [[pipe]]
 *Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
-{{mid}}
+{{trans-mid}}
 *Korean: [[아양떨다]] (ayang-tteolda) 
-{{bottom}}
+{{trans-bottom}}
 
-create or shape by blowing <!--9-->
-{{top}}
+{{trans-top|create or shape by blowing}} <!--9-->
 *Dutch: [[blazen]]
+*Finnish: [[puhaltaa]]
 *Korean: [[불다]] (bulda)
-{{mid}}
+{{trans-mid}}
 *Russian: [[выдувать]]/[[выдуть]] (vyduvát'/výdut')
 *Vietnamese: [[thổi]]
-{{bottom}}
-leave <!--10-->
-{{top}}
+{{trans-bottom}}
+
+{{trans-top|leave}} <!--10-->
+*Finnish: [[häipyä]]
 *Korean: [[그만두다]] (geuman-duda)
-{{mid}}
+{{trans-mid}}
 *Vietnamese: [[bỏ đi]], [[chuồn]]
-{{bottom}}
+{{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
@@ -141,7 +144,7 @@ leave <!--10-->
 
 ''transitive meanings''
 
-*{{ttbc|Finnish}}: [[puhaltaa]] (1,4), [[tuhlata]] (2), [[ottaa suihin]] (3)
+*{{ttbc|Finnish}}: [[puhaltaa]] (4), [[tuhlata]] (2)
 
 ===Noun===
 {{en-noun}}
