--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/bɪ'həʊld/}}
-
+* [[Recieved Pronunciation|RP:]] /bɪ'həʊld/
+* [[General American|GenAM:]] /bɪ'hoʊld/
 ===Verb===
 {{en-verb|beholds|beholding|beheld}}
 
