--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -30,6 +30,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 # (slang) [[police officer|Police officer]].
 
 ====Translations====
+*Norwegian: [[purk]] {{m}}
 *Polish: [[gliniarz]] {{m}}, [[glina]] {{m}}
 *Slovak: [[poliš]] ''m'', [[hekáč]] ''m''
 *Spanish: [[tombo]] {{m}}
