--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -91,6 +91,7 @@ Old English ''[[leþer]]''
 
 [[Category:1000 English basic words]]
 
+[[ar:leather]]
 [[fr:leather]]
 [[ko:leather]]
 [[io:leather]]
