--- a/en/p/physiologic pH.741233.wikitext
+++ b/en/p/physiologic pH.741233.wikitext
@@ -1,3 +1,3 @@
-'''Physiologic pH''' is the [[pH]] that normally prevails in the human body.
+'''Physiologic pH''' is the [[pH]] that normally prevails in the human body. It's approximately 7.4.
 
 {{medicine-stub}}
