--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -29,6 +29,7 @@
 *Indonesian: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 *Interlingua: [[quac]] (1)
 *Italian: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
+*Japanese: [[クェッ クェッ]], [[クワッ クワッ]](1), (2)[[やぶ医者]] (yabuisha)
 {{mid}}
 *Polish: [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
 *Romanian: [[mac]] (1) [[şarlatan]] (2,3)
