robot  Adding: [[ta:itself]] <itself#1978414>

--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -24,4 +24,5 @@ The reflexive form of ''[[it]]'', the third person singular, neuter, personal pr
 [[ja:itself]]
 [[simple:itself]]
 [[fi:itself]]
+[[ta:itself]]
 [[zh:itself]]
