--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -81,5 +81,6 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[hu:though]]
 [[simple:though]]
 [[fi:though]]
+[[ta:though]]
 [[vi:though]]
 [[zh:though]]
