--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -67,7 +67,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Dutch: [[echter]]
 *Finnish: [[huolimatta]]
 *French: [[néanmoins]]
-*Greek: [[εν τούτοις]] (en tutis), [[παρά ταύτα]] (para tafta), ωστόσο (ostoso)
+*Greek: [[εν τούτοις]] (en tutis), [[παρά ταύτα]] (para tafta), [[ωστόσο]] (ostoso)
 *Indonesian: [[bagaimanapun juga]]
 *[[Interlingua]]: [[benque]], [[malgrado]], [[non obstante]]
 *Italian: [[comunque]], [[nonostante]]
