tidy up of Chemistry terms <CFC#1984668>

--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -1,6 +1,7 @@
 ==English==
+
 ==={{initialism}}===
 '''CFC'''
 
-# [[chlorofluorocarbon]]
-# Combined Federal Campaign (US)
+# {{organic chemistry}} [[chlorofluorocarbon]]
+# {{US}} Combined Federal Campaign
