Rephrased Latin def. <qua#1988818>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From Latin ''[[#Latin|qua]]'' ‘in the capacity of’.
+From Latin '''[[#Latin|qua]]''', ''as'', ''"in the capacity of"''.
 
 ===Pronunciation===
 *{{IPA|/kwɑː/}}
@@ -69,9 +69,9 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 ===Adverb===
 '''qua'''
 
-# In the capacity of
-# In the character of
+# [[as]]; in the capacity or character of
 # In so far as
+#: ''ens qua ens'' ("being as being")
 
 ==Vietnamese==
 ===Preposition===
