combine verb senses; overhaul format <rabbit#1990980>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -8,10 +8,10 @@
 *[[w:SAMPA|SAMPA]]: (''UK, US'') /"r{bIt/, (''Australia'') /"r{b@t/
 *Rhymes: [[Rhymes:English:-æbɪt|-æbɪt]]
 
-===Etymology===
+===Etymology 1===
 From Northern [[French]]
 
-===Noun===
+====Noun====
 
 {{en-noun}}
 # Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
@@ -21,22 +21,20 @@ From Northern [[French]]
 #{{cricket}} a very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]]
 #{{Colloquial}} Someone new to something.
 
-====Synonyms====
+=====Synonyms=====
 *[[bunny]] (''[[hypocoristic]]'')
 
-====Related terms====
-{{top}}
+=====Related terms=====
+{{top2}}
 *[[jackrabbit]]
 *[[kill the rabbit]]
-{{mid}}
+{{mid2}}
+*[[pull a rabbit out of the hat]]
 *[[rabbity]]
+*[[Welsh rabbit]]
 {{bottom}}
 
-====See also====
-*[[pull a rabbit out of the hat]]
-*[[Welsh rabbit]]
-
-====Translations====
+=====Translations=====
 '''mammal'''
 {{top}}
 *Albanian: [[lepur i gropave]]
@@ -116,38 +114,34 @@ From Northern [[French]]
 *Welsh: [[cwningen]]
 {{bottom}}
 
-=== Verb ===
-'''to rabbit'''
-# {{UK}} to talk [[incessantly]] and in a childish manner; to [[babble]]
-#: ''Stop your infernal '''rabbiting'''! Use proper words or nobody will listen to you!''
-
-==== Synonyms ====
-*{{italbrac|to talk incessantly and childishly}}: [[babble]], [[blather]], [[prattle]]
-
-==== Related terms ====
-* [[chew the fat]]
-* [[chew the cud]] {{UK}}
-* [[shoot the breeze]] {{US}}
-
-===See also===
-{{top}}
+====See also====
+{{top2}}
 *[[buck]]
 *[[cottontail]]
 *[[doe]]
 *[[hare]]
-{{mid}}
+{{mid2}}
 *[[kitten]]
 *[[warren]]
 *[[w:rabbit|Wikipedia article on the rabbit]]
 {{bottom}}
 
-===Etymology===
+===Etymology 2===
 From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 
-====Intransitive verb====
-{{en-infl-reg-consonant|rabbit|t|}}
-# ''(British):'' To talk, especially annoyingly or to excess.
-#: ''He just keeps '''rabbitting''' on''.
+====Verb====
+{{en-verb|rabbits|rabbitting|rabbitted}}
+
+# {{context|UK|intransitive}} to talk [[incessantly]] and in a childish manner; to [[babble]] annoyingly.
+#: ''Stop your infernal '''rabbiting'''! Use proper words or nobody will listen to you!''
+
+===== Synonyms=====
+*{{italbrac|to talk incessantly and childishly}}: [[babble]], [[blather]], [[prattle]]
+
+====See also====
+* [[chew the fat]]
+* [[chew the cud]] {{UK}}
+* [[shoot the breeze]] {{US}}
 
 [[Category:Mammals]]
 
