robot  Adding: [[pl:bid]] <bid#1993384>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -91,6 +91,7 @@ A conflation of two Old English verbs: [[biddan]] ‘ask, demand’, and [[beoda
 [[io:bid]]
 [[it:bid]]
 [[hu:bid]]
+[[pl:bid]]
 [[ru:bid]]
 [[fi:bid]]
 [[vi:bid]]
