robot  Adding: [[fa:blown]] <blown#1993481>

--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -32,5 +32,6 @@ Middle English [[blawen]], from Old English [[blaƿan|bláƿan]] (bláwan), past
 #(''glass'') [[formed]] by [[blowing]]
 #(''[[marijuana]]'') under the influence of [[drug]]s
 
+[[fa:blown]]
 [[fr:blown]]
 [[vi:blown]]
