[[User:Connel MacKenzie/Format|mfmt]], {{gender}}, +rfd-sense, +exs <rabbit#1995784>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -1,5 +1,4 @@
-[[Image:Sylvilagus floridanus 14136.JPG|thumb|right|A rabbit (sense 1).]]
-
+[[Image:Sylvilagus floridanus 14136.JPG|thumb|A rabbit (sense 1).]]
 ==English==
 
 ===Pronunciation===
@@ -12,14 +11,15 @@
 From Northern [[French]]
 
 ====Noun====
-
 {{en-noun}}
+
 # Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
-# Any of a number of [[small]] [[hare]]s.
+#:''The pioneers survived by eating the small game they could get; '''rabbits''', squirrels and occasionally a raccoon.''
+# {{rfd-redundant}} Any of a number of [[small]] [[hare]]s.
 # The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
-# A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can [[win]] or to help another break a [[record]]; a [[pacesetter]]. 
-#{{cricket}} a very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]]
-#{{Colloquial}} Someone new to something.
+# A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can [[win]] or to help another break a [[record]]; a [[pacesetter]].
+# {{cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
+# {{rfv-sense}} {{colloquial}} Someone new to something.
 
 =====Synonyms=====
 *[[bunny]] (''[[hypocoristic]]'')
@@ -35,8 +35,7 @@ From Northern [[French]]
 {{bottom}}
 
 =====Translations=====
-'''mammal'''
-{{top}}
+{{trans-top|mammal}}
 *Albanian: [[lepur i gropave]]
 *Arabic: {{ARchar|[[ارنب|أرْنَب]]}}
 *[[Basque]]: [[untxi]]
@@ -49,8 +48,8 @@ From Northern [[French]]
 *Chinese: [[兔]] (tù, baitu, bai2tu4)
 *Croatian: [[kunić#Croatian|kunić]] {{m}}
 *Czech: [[králík]]
-*Danish: [[kanin]] ''c''
-*Dutch: [[konijn]] ''n''
+*Danish: [[kanin]] {{c}}
+*Dutch: [[konijn]] {{n}}
 *[[Esperanto]]: [[kuniklo]]
 *Estonian: [[küülik]]
 *[[Faroese]]: [[kanin]]
@@ -59,7 +58,7 @@ From Northern [[French]]
 *[[Frisian]]: [[knyn]]
 *[[Friulian]]: [[cunin]]
 *[[Gallegan]]: [[coello]]
-*German: [[Kaninchen]] ''n''
+*German: [[Kaninchen]] {{n}}
 *Greek: [[κουνέλι]] (kuneli) {{n}}
 *Gujarati: [[સસલું]] (saslu.n)
 *Hebrew: [[ארנב]]
@@ -75,7 +74,7 @@ From Northern [[French]]
 *[[Kurdish]]:
 *:Kurmanji: {{trad|ku|kêroşk}}, {{trad|ku|xirrnîfk}}
 *:Sorani: {{FAchar|[[کەرويشک]]}} (kêrwişk)
-{{mid}}
+{{trans-mid}}
 *[[Ladin]]: [[conicio]]
 *Latin: [[cuniculus]] {{m}}
 *Latvian: [[trusis]]
@@ -102,7 +101,7 @@ From Northern [[French]]
 *Slovenian: [[kunec]] {{m}}
 *[[Somali]]: [[bakayle]]
 *Spanish: [[conejo]] {{m}}
-*Swedish: [[kanin]] ''c''
+*Swedish: [[kanin]] {{c}}
 *Telugu: [[కుందేలు]] (kumdealu)
 *Turkish: [[tavşan]]
 *[[Tzotzil]]: [[t'ul]]
@@ -112,7 +111,7 @@ From Northern [[French]]
 *Urdu: {{URchar|[[خرگوش#Urdu|خرگوش]]}} (<u>kh</u>argoš) {{m}}
 *[[Volapük]]: [[krolig]]
 *Welsh: [[cwningen]]
-{{bottom}}
+{{trans-bottom}}
 
 ====Verb====
 {{en-verb|rabbits|rabbitting|rabbitted}}
@@ -140,7 +139,7 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 # {{context|UK|intransitive}} to talk [[incessantly]] and in a childish manner; to [[babble]] annoyingly.
 #: ''Stop your infernal '''rabbiting'''! Use proper words or nobody will listen to you!''
 
-===== Synonyms=====
+=====Synonyms=====
 *{{italbrac|to talk incessantly and childishly}}: [[babble]], [[blather]], [[prattle]]
 
 ====See also====
