robot  Adding: [[zh:bitten]] <bitten#1999642>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -51,3 +51,4 @@ Common Germanic *''[[bidjan]]'', whence also Old English ''[[biddan]]'', Old Nor
 [[hu:bitten]]
 [[ru:bitten]]
 [[fi:bitten]]
+[[zh:bitten]]
